<resources>
    <string name="app_name">Rebound</string>
    <string name="username">Username</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="name">Name</string>
    <string name="birth_date">Birth Date</string>
    <string name="mail">Mail</string>
    <string name="skills">Skills will be shown here</string>
    <string name="badges">Badges will be shown here</string>
    <string name="followed">Followed users will be listed here</string>
    <string name="following">Followers will be listed here</string>
    <string name="post_history">Post history will be shown here</string>
    <string name="update_password">UPDATE PASSWORD</string>
    <string name="delete_profile">DELETE PROFILE</string>
    <string name="logout">LOGOUT</string>
    <string name="signup">SIGNUP</string>
    <string name="username_signup">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="interests">Interests</string>
    <string name="sign_up">SIGN UP</string>
    <string name="rebound_image">rebound image</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email">Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm">CONFIRM</string>
    <string name="token">Token</string>
    <string name="reset_password_desc">Check your email and enter the token to confirm resetting the password.</string>
    <string name="new_password">New Password</string>
    <string name="events">Events</string>
    <string name="search">Search</string>
    <string-array name="sports_array">
        <item>Football</item>
        <item>Basketball</item>
        <item>Tennis</item>
    </string-array>
    <string-array name="skills_array">
        <item>Beginner</item>
        <item>Pre-Intermediate</item>
        <item>Intermediate</item>
        <item>Expert</item>
    </string-array>
    <string-array name="age_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="sport_types_array">
        <item>Sports.. *</item>
        <item>Football</item>
        <item>Basketball</item>
        <item>Tennis</item>
        <item>Climbing</item>
        <item>Water Polo</item>
        <item>Sumo Wrestling</item>
    </string-array>
    <string-array name="min_skill_array">
        <item>Minimum Skill Level..</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="max_skill_array">
        <item>Maximum Skill Level..</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>