<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_xx_large"
                android:hint="@string/name" />

            <TextView
                android:id="@+id/tv_birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_xx_large"
                android:hint="@string/birth_date" />
            <Button
                android:id="@+id/btn_date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:text="Select Birth Date" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_xx_large"
                android:hint="@string/mail" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_skills"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_xx_large"
                android:enabled="false"
                android:text="@string/skills" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_badges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_xx_large"
                android:enabled="false"
                android:text="@string/badges" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_followed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_xx_large"
                android:enabled="false"
                android:text="@string/followed" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_followers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_xx_large"
                android:enabled="false"
                android:text="@string/following" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/post_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_xx_large"
                android:enabled="false"
                android:text="@string/post_history" />

            <Button
                android:id="@+id/button_update_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_xx_large"
                android:text="@string/update_password" />

            <Button
                android:id="@+id/button_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_xx_large"
                android:text="@string/logout" />

            <Button
                android:id="@+id/button_delete_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_xx_large"
                android:text="@string/delete_profile" />



        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>