<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivCard"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                app:layout_constraintCircleRadius="2dp"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_avatar"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_xx_large">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="First Name"
                    android:editable="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_xx_large">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Last Name"
                    android:editable="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_xx_large">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Location"
                    android:editable="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_xx_large">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_fav_sport1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Fav Sport1"
                    android:editable="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_xx_large">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_fav_sport2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Fav Sport2"
                    android:editable="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_xx_large">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_fav_sport3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Fav Sport3"
                    android:editable="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_xx_large">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Bio"
                    android:editable="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_xx_large">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_badges"
                    android:enabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Badges" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_view_events"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="VIEW EVENTS CREATED BY USER"
                android:backgroundTint="#86000000"
                android:layout_marginHorizontal="@dimen/space_xx_large"
                />
            <Button
                android:id="@+id/btn_view_played_events"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="VIEW EVENTS THIS USER HAS PARTICIPATED IN"
                android:backgroundTint="#86000000"
                android:layout_marginHorizontal="@dimen/space_xx_large"
                />

            <Button
                android:id="@+id/btn_give_a_badge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_xx_large"
                android:backgroundTint="@color/teal_700"
                android:text="GIVE A BADGE" />

            <Button
                android:id="@+id/btn_follow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_xx_large"
                android:backgroundTint="#0AD112"
                android:text="FOLLOW THIS USER" />
            <Button
                android:id="@+id/btn_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_xx_large"
                android:backgroundTint="#86F10606"
                android:text="UNFOLLOW THIS USER" />

            <Button
                android:id="@+id/button_update_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_xx_large"
                android:text="@string/update_password"
                android:visibility="gone"/>

            <Button
                android:id="@+id/button_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_xx_large"
                android:text="@string/logout"
                android:visibility="gone"/>

            <Button
                android:id="@+id/button_delete_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_xx_large"
                android:text="@string/delete_profile"
                android:visibility="gone"/>



        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>